Make CORB exceptions for plugins resilient to NetworkService crashes.

Bug: 891904, 891891
Change-Id: I1e05b2527ff7f2e2c452525fa3a460dedc96e9f5
Reviewed-on: https://chromium-review.googlesource.com/c/1263555
Commit-Queue: Łukasz Anforowicz <lukasza@chromium.org>
Reviewed-by: Raymes Khoury <raymes@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602020}
Former-commit-id: ce4487b7a0d0ef150b5edea19f2db53668dd7d0f