content/public/browser/network_service_instance.h
@@ -7,6 +7,7 @@
 
 #include "base/callback.h"
 #include "content/common/content_export.h"
+#include "gpu/command_buffer/common/id_type.h"
 
 namespace network {
 class NetworkConnectionTracker;
@@ -37,6 +38,28 @@ CONTENT_EXPORT network::mojom::NetworkService* GetNetworkService();
 // This method can only be called on the UI thread.
 CONTENT_EXPORT network::mojom::NetworkService* GetNetworkServiceFromConnector(
     service_manager::Connector* connector);
+
+// Opaque type identifying a registered NetworkService crash handler.
+class CrashHandlerDummyType;
+using NetworkServiceCrashHandlerId = gpu::IdType32<CrashHandlerDummyType>;
+
+// Registers |handler| to run (on UI thread) after NetworkServicePtr encounters
+// an error.  Note that there are no ordering wrt error handlers for other
+// interfaces (e.g. NetworkContextPtr and/or URLLoaderFactoryPtr).
+//
+// The return value can be passed to UnregisterNetworkServiceCrashHandler to
+// unregister the |handler|.
+//
+// Can only be called on the UI thread.  No-op if NetworkService is disabled.
+CONTENT_EXPORT NetworkServiceCrashHandlerId
+RegisterNetworkServiceCrashHandler(base::RepeatingClosure handler);
+
+// Unregisters the crash handler with the given |handler_id|.  See also
+// RegisterNetworkServiceCrashHandler.
+//
+// Can only be called on the UI thread.  No-op if NetworkService is disabled.
+CONTENT_EXPORT void UnregisterNetworkServiceCrashHandler(
+    NetworkServiceCrashHandlerId handler_id);
 
 // When network service is disabled, returns the in-process NetworkService
 // pointer which is used to ease transition to network service.
