ppapi/shared_impl/ppapi_constants.h
@@ -12,10 +12,13 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 namespace ppapi {
 
 #if defined(OS_WIN)
+const char kCorbTestPluginName[] = "corb_test_plugin.dll";
 const char kPowerSaverTestPluginName[] = "power_saver_test_plugin.dll";
 #elif defined(OS_MACOSX)
+const char kCorbTestPluginName[] = "corb_test_plugin.plugin";
 const char kPowerSaverTestPluginName[] = "power_saver_test_plugin.plugin";
 #elif defined(OS_POSIX)
+const char kCorbTestPluginName[] = "libcorb_test_plugin.so";
 const char kPowerSaverTestPluginName[] = "libpower_saver_test_plugin.so";
 #endif
 
