content/public/test/ppapi_test_utils.cc
@@ -4,6 +4,7 @@
 
 #include "content/public/test/ppapi_test_utils.h"
 
+#include <string>
 #include <vector>
 
 #include "base/command_line.h"
@@ -72,6 +73,20 @@ bool RegisterPluginWithDefaultMimeType(
   return RegisterPlugins(command_line, plugins);
 }
 
+bool RegisterFlashTestPluginLibrary(base::CommandLine* command_line,
+                                    const StringType& library_name) {
+  std::vector<PluginInfo> plugins;
+  // Register a fake Flash with 100.0 version (to avoid outdated checks).
+  base::FilePath::StringType fake_flash_parameter =
+      base::FilePath::FromUTF8Unsafe(
+          std::string("#") + content::kFlashPluginName + "#Description#100.0")
+          .value();
+  plugins.push_back(
+      PluginInfo(library_name, fake_flash_parameter,
+                 FILE_PATH_LITERAL("application/x-shockwave-flash")));
+  return RegisterPlugins(command_line, plugins);
+}
+
 }  // namespace
 
 bool RegisterTestPlugin(base::CommandLine* command_line) {
@@ -93,6 +108,12 @@ bool RegisterTestPluginWithExtraParameters(
                                            extra_registration_parameters);
 }
 
+bool RegisterCorbTestPlugin(base::CommandLine* command_line) {
+  StringType library_name =
+      base::FilePath::FromUTF8Unsafe(ppapi::kCorbTestPluginName).value();
+  return RegisterFlashTestPluginLibrary(command_line, library_name);
+}
+
 bool RegisterFlashTestPlugin(base::CommandLine* command_line) {
   // Power Saver plugin requires Pepper testing API.
   command_line->AppendSwitch(switches::kEnablePepperTesting);
@@ -102,18 +123,9 @@ bool RegisterFlashTestPlugin(base::CommandLine* command_line) {
   //
   // It was originally designed just for Plugin Power Saver tests, but is
   // useful for testing as a fake Flash plugin in a variety of tests.
-  base::FilePath::StringType library_name =
+  StringType library_name =
       base::FilePath::FromUTF8Unsafe(ppapi::kPowerSaverTestPluginName).value();
-  std::vector<PluginInfo> plugins;
-  // Register a fake Flash with 100.0 version (to avoid outdated checks).
-  base::FilePath::StringType fake_flash_parameter =
-      base::FilePath::FromUTF8Unsafe(
-          std::string("#") + content::kFlashPluginName + "#Description#100.0")
-          .value();
-  plugins.push_back(
-      PluginInfo(library_name, fake_flash_parameter,
-                 FILE_PATH_LITERAL("application/x-shockwave-flash")));
-  return RegisterPlugins(command_line, plugins);
+  return RegisterFlashTestPluginLibrary(command_line, library_name);
 }
 
 bool RegisterBlinkTestPlugin(base::CommandLine* command_line) {
